# grok-alex-lego-rag1

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  api_integrations.py  app.py  debug_setup.py  fix_faiss.py  lego_data.duckdb  load_data.py  preload_db.py  prepare_deployment.py  pyproject.toml  requirements.txt  search_optimizer.py  setup_apis.py  test_api_keys.py  test_gitpod.ps1
faiss_index/: index.pkl
